[gd_scene load_steps=3 format=3 uid="uid://b7mfbhjbnelg1"]

[ext_resource type="Script" uid="uid://ctx1sho6q6vom" path="res://Utilities/pause_menu/graphics_menu/graphics_settings.gd" id="1_lylex"]
[ext_resource type="Theme" uid="uid://dr1yk2pxxkcq3" path="res://Assets/theme.tres" id="2_n4gta"]

[node name="GraphicsSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lylex")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -441.0
offset_top = -247.0
offset_right = 441.0
offset_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n4gta")
current_tab = 1

[node name="Video" type="ScrollContainer" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Video"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n4gta")

[node name="GridContainer" type="GridContainer" parent="PanelContainer/TabContainer/Video/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 25
columns = 2

[node name="FullscreenLabel" type="Label" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_n4gta")
text = "Window Mode "

[node name="FullscreenOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../..")
focus_neighbor_bottom = NodePath("../MonitorOptionButton")
theme = ExtResource("2_n4gta")
alignment = 1
expand_icon = true
item_count = 3
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Borderless"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2

[node name="MonitorLabel" type="Label" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_n4gta")
text = "Monitor"

[node name="MonitorOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../FullscreenOptionButton")
focus_neighbor_bottom = NodePath("../VSyncOptionButton")

[node name="VSyncLabel" type="Label" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_n4gta")
text = "Vertical Sync"

[node name="VSyncOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../MonitorOptionButton")
focus_neighbor_bottom = NodePath("../ScaleContainer/ScaleSlider")
item_count = 3
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Adaptive"
popup/item_1/id = 1
popup/item_2/text = "Enabled"
popup/item_2/id = 2

[node name="ScaleLabel" type="Label" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_n4gta")
text = "Render Scale"

[node name="ScaleContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n4gta")

[node name="ScaleSlider" type="HSlider" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/ScaleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../VSyncOptionButton")
focus_neighbor_bottom = NodePath("../../FPSContainer/FPSSlider")
min_value = 0.25
max_value = 2.0
step = 0.05
value = 1.0
scrollable = false
tick_count = 8

[node name="ScaleLabel" type="Label" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/ScaleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="FPSLabel" type="Label" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_n4gta")
text = "FPS Limit"

[node name="FPSContainer" type="HBoxContainer" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n4gta")

[node name="FPSSlider" type="HSlider" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/FPSContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_top = NodePath("../../ScaleContainer/ScaleSlider")
max_value = 300.0
step = 10.0
scrollable = false
tick_count = 7

[node name="FPSLabel" type="Label" parent="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/FPSContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "Off"
horizontal_alignment = 2

[node name="Graphics" type="ScrollContainer" parent="PanelContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/TabContainer/Graphics"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_n4gta")

[node name="GridContainer" type="GridContainer" parent="PanelContainer/TabContainer/Graphics/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 25
columns = 2

[node name="FilteringLabel" type="Label" parent="PanelContainer/TabContainer/Graphics/MarginContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_n4gta")
text = "TODO Filtering"

[node name="FilteringOptionButton" type="OptionButton" parent="PanelContainer/TabContainer/Graphics/MarginContainer/GridContainer" groups=["buttons"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../..")
theme = ExtResource("2_n4gta")
alignment = 1
expand_icon = true
item_count = 5
popup/item_0/text = "Trilinear"
popup/item_0/id = 0
popup/item_1/text = "Anisotropic 2x"
popup/item_1/id = 1
popup/item_2/text = "Anisotropic 4x"
popup/item_2/id = 2
popup/item_3/text = "Anisotropic 8x"
popup/item_3/id = 3
popup/item_4/text = "Anisotropic 16x"
popup/item_4/id = 4

[connection signal="item_selected" from="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/FullscreenOptionButton" to="." method="_on_fullscreen_option_button_item_selected"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/MonitorOptionButton" to="." method="_on_monitor_option_button_item_selected"]
[connection signal="drag_ended" from="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/ScaleContainer/ScaleSlider" to="." method="_on_scale_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/ScaleContainer/ScaleSlider" to="." method="_on_scale_slider_value_changed"]
[connection signal="drag_ended" from="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/FPSContainer/FPSSlider" to="." method="_on_fps_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/TabContainer/Video/MarginContainer/GridContainer/FPSContainer/FPSSlider" to="." method="_on_fps_slider_value_changed"]
[connection signal="item_selected" from="PanelContainer/TabContainer/Graphics/MarginContainer/GridContainer/FilteringOptionButton" to="." method="_on_filtering_option_button_item_selected"]
